--- a/app/static/css/pages/agenda/agenda-view-owners.css
+++ b/app/static/css/pages/agenda/agenda-view-owners.css
@@ -1,14 +1,14 @@
 .col-owner .owner-row {
-	margin-bottom: 2px;
+    margin-bottom: 2px;
 }
 
 .col-owner .owner-row:last-child {
-	margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .owner-meta {
-	font-size: 0.85em;
-	color: #666;
+    font-size: 0.85em;
+    color: #666;
 }
 
 /* Role Badges */
@@ -16,19 +16,22 @@
     display: inline-block;
     padding: 2px 6px;
     border-radius: 4px;
-    font-size: 0.75em;
+    font-size: 0.6em;
     font-weight: bold;
     color: white;
     margin-right: 6px;
     vertical-align: middle;
     text-transform: uppercase;
     line-height: 1.2;
+    white-space: nowrap;
 }
 
 .role-badge.required {
-    background-color: #d9534f; /* Bootstrap Danger Red */
+    background-color: #d9534f;
+    /* Bootstrap Danger Red */
 }
 
 .role-badge.elective {
-    background-color: #5bc0de; /* Bootstrap Info Blue */
+    background-color: #5bc0de;
+    /* Bootstrap Info Blue */
 }
