--- a/app/static/css/core/responsive.css
+++ b/app/static/css/core/responsive.css
@@ -177,4 +177,12 @@
         width: 100%;
         padding-top: 80px;
     }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    h3 {
+        font-size: 1.2rem;
+    }
 }
